[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognos"
version = "0.1.4"
description = "The Python SDK for Cognos Cloud — deploy autonomous AI agents in minutes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cognos Cloud", email = "hello@cognos.ai" }]
keywords = ["ai", "agents", "llm", "deployment", "cognos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage   = "https://cognoscloud.xyz"
Repository = "https://github.com/cognos-cloud/cognos-cloud"
Docs       = "https://cognoscloud.xyz/docs"

[project.scripts]
cognos = "cognos_cli.main:app"
